# vfunds

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  release.sh
example/: afof.fof.toml  all-weather.toml  benchmark.fund.toml  benchmark.toml  benchmark2.fund.toml  buy-hold.toml  conv-bond.fund.toml  dividend-rotation.fund.toml  factors-boosting.fund.toml  factors-knn.fund.toml  factors-ranker.fund.toml  factors-ranker.toml  halo.fund.toml  high-dividend.fund.toml  high-dividend.toml  high-momentum-sharpe.fund.toml  high-momentum.fund.toml  high-real-cash.fund.toml  high-return-low-pe.fund.toml  high-return-low-px.fund.toml  high-roe-low-pb.fund.toml  high-stablity.fund.toml  hold-all-equal-yearly.toml  hold-n-yearly.toml  hold-one-by-macd.toml  hold-one-rebalance-by-macd.toml  hold-one.toml  hold-topn-by-dividend-yearly.toml  hold-topn-by-dv-yearly.toml  keep-equal-yearly.toml  low-pb.fund.toml  low-turnover.fund.toml  permanent.fund.toml  price-reversion.fund.toml  rebalance_macd.toml  risk-parity.fund.toml  safe-valuation.fund.toml  safe-valuation.toml  small-cap.fund.toml  stock.toml  (+7 more)
proxy/: qmt_http.py
src/: api.rs  backtest.rs  cache.rs  cli.rs  data.rs  ds.rs  error.rs  filter.rs  financial.rs  gui.rs  lib.rs  main.rs  market.rs  notifier.rs  rule.rs  spec.rs  ticker.rs  utils.rs
src/backtest/: fof.rs  fund.rs
src/cli/: backtest.rs  check.rs  config.rs  kline.rs  list.rs  result.rs  show.rs
src/cli/config/: set.rs  (+1 more)
src/data/: daily.rs  series.rs  stock.rs
src/ds/: aktools.rs  qmt.rs  tushare.rs
src/filter/: filter_delisted.rs  filter_invalid.rs  filter_market_cap.rs  filter_st.rs
src/financial/: bond.rs  helper.rs  index.rs  market.rs  sector.rs  stock.rs  tool.rs
src/gui/: kline_viewer.rs  result_viewer.rs
src/notifier/: wecom.rs
src/rule/: buy_equaly.rs  hold.rs  hold_all_equal.rs  hold_by_cluster_pb.rs  hold_by_conv_bond_premium.rs  hold_by_dividend.rs  hold_by_factors_boosting.rs  hold_by_factors_knn.rs  hold_by_factors_score.rs  hold_by_momentum.rs  hold_by_momentum_sharpe.rs  hold_by_price_deviation.rs  hold_by_real_cash.rs  hold_by_return_deviation.rs  hold_by_return_px_ratio.rs  hold_by_risk_parity.rs  hold_by_roe_pb.rs  hold_by_small_cap.rs  hold_by_stablity.rs  hold_by_trend.rs  hold_by_turnover.rs  hold_dividend_topn_equal.rs  hold_equal.rs  hold_risk_parity.rs  hold_top_conv_bond.rs  hold_top_dividend.rs  hold_top_dividend_equal.rs  hold_top_factors_score.rs  hold_top_factors_score_equal.rs  hold_top_return_pe_ratio.rs  hold_top_return_px_ratio.rs  hold_top_trend.rs  hold_top_trend_equal.rs  hold_topn_by_dividend_equal.rs  hold_topn_equal.rs  keep_equal.rs  macd_crossover.rs  macd_signal_line_crossover.rs  resize_by_drift.rs  resize_by_index_valuation.rs  (+8 more)
src/utils/: compress.rs  datetime.rs  financial.rs  math.rs  net.rs  smartcore.rs  stats.rs  text.rs
