[package]
name = "vfunds"
version = "1.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.42"
clap = { version = "4.5.38", features = ["derive", "unicode"] }
colored = "3.0.0"
confy = "2.0.0"
csv = "1.3.1"
dashmap = { version = "6.1.0", features = ["rayon"] }
directories = "6.0.0"
eframe = { version = "0.33.0", features = ["persistence"] }
egui_plot = "0.34.0"
env_logger = "0.11.8"
fake_user_agent = "0.2.2"
flate2 = "1.1.2"
futures = "0.3.31"
hsv = "0.1.1"
indicatif = { version = "0.18.2", features = ["improved_unicode", "tokio"] }
itertools = "0.14.0"
libsql = "0.9.19"
log = "0.4.27"
natord = "1.0.9"
num-traits = "0.2.19"
pinyin = "0.10.0"
polars = { version = "0.51.0", features = ["lazy"] }
rand = "0.9.2"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["json", "stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smartcore = "0.4.3"
strum = { version = "0.27.1", features = ["derive"] }
ta = "0.5.0"
tabled = "0.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
url = "2.5.4"

[lints.clippy]
collapsible_if = "allow"
collapsible_else_if = "allow"
literal_string_with_formatting_args = "allow"

[profile.release]
lto = true
