[package]
name = "vfunds"
version = "2.6.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "unicode"] }
colored = "3.0.0"
confy = "2.0.0"
csv = "1.4.0"
ctor = "0.6.3"
dashmap = { version = "6.1.0", features = ["rayon"] }
directories = "6.0.0"
eframe = { version = "0.33.3", features = ["persistence"] }
egui_plot = "0.34.0"
env_logger = "0.11.8"
flate2 = "1.1.5"
futures = "0.3.31"
hsv = "0.1.1"
indicatif = { version = "0.18.3", features = ["improved_unicode", "tokio"] }
itertools = "0.14.0"
libsql = "0.9.29"
log = "0.4.29"
natord = "1.0.9"
num-traits = "0.2.19"
pinyin = "0.10.0"
polars = { version = "0.52.0", features = ["lazy", "timezones"] }
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["json", "stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smartcore = "0.4.8"
strum = { version = "0.27.2", features = ["derive"] }
ta = "0.5.0"
tabled = "0.20.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
url = "2.5.7"

[lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
literal_string_with_formatting_args = "allow"

[profile.release]
lto = true
